<resources>
    <string name="app_name">Movies Hub</string>
    <string name="API_KEY">PUT YOUR API KEY</string>

    <string name="CATEGORY_SELECTED">category</string>
    <string name="dialog_message">Please check your internet connection</string>
    <string name="dialog_title">No Internet</string>
    <string name="ok">okay</string>
    <string name="image">Image</string>
    <string name="rating">Rating : </string>
    <string name="run_time">Run time : </string>
    <string name="min">min</string>
    <string name="release_date">Release Date : </string>
    <string name="genres">Genres :</string>
    <string name="poster">Poster</string>
    <string name="poster_transition">Poster_Transition</string>
    <string name="please_check_your_internet">Please Check your Internet</string>
    <string name="retry">Retry</string>
    <string name="synopsis">Synopsis</string>
    <string name="rating_star">Rating Star</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="favourites">Favourites</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="exit">Exit</string>
    <string name="trailers">Trailers</string>
    <string name="LIST_STATE_KEY">recycler_list_state</string>
    <string name="PAGE_STATE_KEY">page</string>
    <string name="laoding">Loading . . .</string>
    <string name="start">You are at the start</string>
    <string name="failure">Unable to load !!</string>
  <string name="delete">Deleted All Favourites !!</string>
    <string name="add">Added to Favourites</string>
    <string name="delete_this">Deleted from Favourites</string>


</resources>
