<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/detail_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@android:color/white" />


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/detail_nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <RelativeLayout
                android:id="@+id/poster_relative"
                android:layout_width="151dp"
                android:layout_height="201dp"
                android:background="@color/white"
                android:padding="1dp">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/poster"
                    android:elevation="25dp"
                    android:transitionName="@string/poster_transition" />
            </RelativeLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/detail_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@id/poster_relative"
                android:elevation="10dp"
                android:src="@drawable/ic_fav"
                app:layout_anchorGravity="bottom|right|end"
                app:pressedTranslationZ="12dp" />

            <RelativeLayout
                android:id="@+id/detail_relative_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_action"
                android:layout_marginStart="10dp"
                android:layout_marginTop="21dp"
                android:layout_toRightOf="@id/poster_relative"
                android:background="@drawable/round_detail_ratings"
                android:padding="10dp">

                <TextView
                    android:id="@+id/detail_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/detail_rating_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/detail_rating"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_action"
                android:layout_marginStart="10dp"
                android:layout_marginTop="21dp"
                android:layout_toEndOf="@id/detail_relative_rating"
                android:contentDescription="@string/rating_star"
                android:src="@drawable/ic_star" />

            <RelativeLayout
                android:id="@+id/detail_relative_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_relative_rating"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:layout_toRightOf="@id/poster_relative"
                android:background="@drawable/round_detail_ratings"
                android:padding="10dp">

                <TextView
                    android:id="@+id/detail_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/run_time"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/detail_runtime_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@id/detail_runtime"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="3dp"
                    android:layout_toEndOf="@id/detail_runtime_tv"
                    android:text="@string/min"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/detail_relative_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/poster_relative"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_detail_release"
                android:padding="12dp">

                <TextView
                    android:id="@+id/detail_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/detail_release_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_release"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/black" />

            </RelativeLayout>


            <TextView
                android:id="@+id/detail_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_relative_release"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_detail_ratings"
                android:padding="10dp"
                android:text="@string/genres"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/detail_genre_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_relative_release"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/detail_genre"
                android:background="@drawable/round_detail_release"
                android:padding="6dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/detail_synopsis_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_genre_recycler"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:elevation="12dp"
                app:cardCornerRadius="30dp">

                <RelativeLayout
                    android:id="@+id/detail_card_relative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/round_detail_ratings">

                    <TextView
                        android:id="@+id/detail_synopsis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="4dp"
                        android:paddingStart="8dp"
                        android:paddingTop="12dp"
                        android:text="@string/synopsis"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="italic" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/detail_synopsis"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@android:color/white" />

                    <TextView
                        android:id="@+id/detail_synopsis_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/detail_synopsis"
                        android:padding="8dp"
                        android:paddingBottom="10dp"
                        android:textColor="@android:color/black" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <View
                android:id="@+id/veiw_1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/detail_synopsis_cardview"
                android:layout_marginTop="15dp"
                android:background="@android:color/white" />


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


    <ProgressBar
        android:id="@+id/detail_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>